# educannews

./: .gitignore  Pipfile  README.md  _test.py  bot.py  config.py  create_db.py  db.py  deploy.sh  educannews.py  fabfile.py  justfile  log.py  main.py  news.py  newsitem.py  notify.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  settings.py  utils.py
.github/workflows/: ci.yml
core/: db.py  log.py  news.py  newsitem.py  utils.py
tests/: test_features.py
