[project]
name = "educannews"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crayons>=0.4.0",
    "logzero>=1.7.0",
    "prettyconf>=2.3.0",
    "python-slugify>=8.0.4",
    "python-telegram-bot==13.7",
    "requests>=2.32.3",
    "typer>=0.15.4",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
]
